# slm-qwen2.5-git-commit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  qwen-commit.example.toml
.github/workflows/: ci.yml
notebooks/: prepare_dataset.ipynb  review_references.ipynb
src/qwen_commit/: __init__.py  __main__.py  cli.py  config.py
src/qwen_commit/candidates/: __init__.py  builder.py  config.py  errors.py  filters.py  models.py  storage.py  utils.py
src/qwen_commit/cli/: __init__.py  data.py  history.py
src/qwen_commit/history/: __init__.py  config.py  errors.py  models.py  scanner.py  utils.py
tests/: helpers.py  test_candidates.py  test_cli.py  test_history.py
