[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "qwen-commit"
version = "0.1.0"
description = "Local-first tooling for concise Git commit subjects"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pyarrow>=18,<24",
    "typer>=0.16,<1",
    "whats-that-code>=0.3.1,<0.4",
]

[project.scripts]
qwen-commit = "qwen_commit.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.6,<5",
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_commit"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "UP"]

[tool.uv]
required-version = ">=0.10,<0.12"
